fix bad spacing in about menu

--- a/resources/assets/css/components/menu.less
+++ b/resources/assets/css/components/menu.less
@@ -221,6 +221,11 @@
   min-width: @tile;
   padding: @menu_padding;
 }
+.menu-about {
+  .calls-to-action {
+    margin-bottom: 1rem;
+  }
+}
 .menu-invite-form {
   .flexy(column);
   margin: @menu_padding 0;
